<resources>
    <string name="app_name">校园生活通</string>
    <string name="wel_title">欢迎使用</string>
    <string name="exitp">退出</string>
    <string name="all">浏览</string>
    <string name="newinsert">添加</string>
    <string name="menu_insert">添加</string>
    <string name="menu_delete">删除</string>
    <string name="title">Title</string>
    <string name="body">Content</string>
    <string name="hint_title">请输入标题</string>
    <string name="hint_content">请输入内容</string>
    <string name="action_settings">Action_Settings</string>
    <string name="confirm">确定</string>
    <string name="delet">删除</string>
    <string name="edit_diary">编辑</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="title_activity_menu">ActivityMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_note_edit">ActivityNoteEdit</string>
    <string name="yb">音乐播放器</string>
    <string name="t1">0:00</string>
    <string name="t2">0:00</string>
    <string name="please_enter_delivery_no">请输入快递单号</string>
    <string name="query">查询</string>
    <string name="query_url">http://www.kuaidi100.com/query</string>
</resources>
